<resources>
    <string name="app_name">LoveAPI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it_s_funs_and_many_more">It\'s Funs and Many more</string>
    <string name="get_started">GET STARTED</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="first_name">First Name</string>
    <string name="you">You</string>
    <string name="second_name">Second Name</string>
    <string name="me">Me</string>
    <string name="try_again">Try again</string>
    <string name="view_pager1">You should take the time to help those
who need you</string>
    <string name="view_pager2">It is now no longer possible for
vou to cherish love</string>
    <string name="view_pager3">We have made the correction for you
don\'t worry
Maybe someone is waiting for you!</string>
    <string name="calculate">Calculate</string>
</resources>