<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.LoveCalcFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_calculator"
        android:textColor="#673AB7"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/first_name"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/et_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/you"
        android:paddingHorizontal="100dp"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/second_name"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/et_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/me"
        android:paddingHorizontal="100dp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="60dp"
        android:text="@string/calculate"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>