<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.ResultFragment">


    <TextView
        android:id="@+id/tv_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/you"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tv_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:text="@string/first_name"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_result"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/first_name"
        android:layout_marginTop="50dp"
        android:id="@+id/tv_percent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/try_again"
        android:textSize="20sp"
        android:paddingHorizontal="100dp"
        android:paddingVertical="10dp"
        android:id="@+id/btn_try_again"/>

</LinearLayout>